# games

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile__1  Testy  cmake_install.cmake  sample.cc
src/: config.cc  config.h  game.h  main.cc  screen.h  snake.h  window.h
